--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>WOLFTOPIA — Winter Edition</title>
-  <link rel="icon" type="image/png" href="/mnt/data/4121102e-55a3-40a5-b64c-7ba72949014c.png">
+  <link rel="icon" type="image/png" href="/mnt/data/image.png">
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;900&display=swap" rel="stylesheet">
   <style>
     * {margin: 0; padding: 0; box-sizing: border-box;}
